--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,13 @@
+body{
+    background: #fafafa;
+    Margin: 50px;
+    border: 6px solid #004a7c;
+    border-radius: 5px;
+}
+.container{
+    background: #e8f1f5
+}
 .row{
     text-align: center;
+    background: #e8f1f5
 }
