--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,8 @@ body{
     Margin: 50px;
     border: 6px solid #004a7c;
     border-radius: 5px;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+
 }
 .container{
     background: #e8f1f5
