--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,6 +34,16 @@ i{
     border: 3px solid #005691;
     padding: 5px;
 }
+#ending, #points{
+    font-size: 75px;
+    text-align: center;
+    margin:0;
+}
+#play{
+    font-size: 40px;
+    text-align: center;
+    margin:0;
+}
 @media only screen and (max-width: 600px) {
     body {
         width: 30vmin;
