--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 body{
     background: #fafafa;
-    Margin: 50px;
+    Margin: 100px;
     border: 6px solid #004a7c;
     border-radius: 5px;
     font-family: 'Yanone Kaffeesatz', sans-serif;
@@ -10,6 +10,7 @@ body{
 .container{
     background: #e8f1f5;
     padding: 50px;
+    width: 100%;
 }
 .row{
     text-align: center;
